--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.0",
     "chartist": "0.10.1",
     "classnames": "2.3.1",
     "history": "5.0.0",
@@ -20,7 +24,7 @@
     "react-swipeable-views": "0.13.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
